# tiagoconnect4

./: .gitignore  README.md  pick.rviz
devel/: .catkin  .rosinstall
devel/lib/pick_piece/: pick_piece
devel/lib/pkgconfig/: aruco.pc  gazetrack.pc  pick_piece.pc  pupil_size_publisher.pc
devel/lib/pupil_size_publisher/: pupil_size_publisher
devel/share/aruco/cmake/: arucoConfig.cmake
devel/share/gazetrack/cmake/: gazetrackConfig.cmake
devel/share/pick_piece/cmake/: pick_pieceConfig.cmake
devel/share/pupil_size_publisher/cmake/: pupil_size_publisherConfig.cmake
src/aruco/: CMakeLists.txt  package.xml
src/aruco/scripts/: aruco.py
src/pick_piece/: CMakeLists.txt  package.xml
src/pick_piece/src/: pick_piece.cpp
src/pupil_size_publisher/: CMakeLists.txt
src/pupil_size_publisher/src/: pupil_size_publisher.cpp
